[package]
name = "pi-supernode-v20"
version = "2.0.1"
authors = ["KOSASIH"]
edition = "2021"
description = "Pi Network Supernode V20 - KOSASIH Production Edition"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KOSASIH/pi-supernode"
keywords = ["blockchain", "p2p", "pi-network", "v20", "supernode"]
categories = ["cryptography::cryptocurrencies", "network-programming"]

# Metadata untuk crates.io
[package.metadata.docs.rs]
all-features = true
rust-version = "1.75"

[dependencies]
# Async Runtime - Production Stable
tokio = { version = "1.36", features = ["full", "tracing", "time"] }
async-trait = "0.1"

# HTTP & RPC - Axum V2 (Better than tower/hyper)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression"] }
hyper = { version = "1.0", features = ["full"] }
http = "1.0"

# Serialization - Production Fast
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.6"
bincode = "1.3"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"
eyre = "0.6"

# CLI - Enhanced
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
clap_complete = "4.5"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }
tracing-appender = "0.2"
opentelemetry = { version = "0.21", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-sys"] }
opentelemetry-semantic-conventions = "0.13"

# Database - Dual Postgres + SQLite
sqlx = { 
    version = "0.7", 
    features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "migrate"] 
}
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.12"
bb8 = "0.8"
mobc = "0.8"

# Cryptography - V20 Ed25519 + Keccak
ed25519-dalek = { version = "2.0", features = ["serde"] }
sha3 = "0.10"
blake3 = "1.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = { version = "0.8", features = ["getrandom"] }
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"
bech32 = "0.10"

# Networking - Full P2P V20
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"] }
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
async-stream = "0.3"

# P2P - Complete libp2p V20
libp2p = { 
    version = "0.53", 
    default-features = false, 
    features = [
        "tcp", "quic", "dns", "websocket", "noise", "yamux", "mplex",
        "relay", "kad", "identify", "ping", "request-response",
        "gossipsub", "mdns"
    ] 
}
libp2p-quic = "0.53"
libp2p-websocket = "0.53"

# Data Structures - Production
dashmap = "6.0"
lru = "0.12"
smallvec = "1.13"
hashbrown = "0.14"
indexmap = "2.1"

# Time & UUID
uuid = { version = "1.7", features = ["v4", "v5", "serde", "fast"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Metrics & Prometheus
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.12"

# JSON RPC V20
jsonrpsee = { version = "0.20", features = ["server", "macros"] }

# Bridge Dependencies (Ethereum/Solana)
ethers = "2.0"
alloy = "0.1"
solana-sdk = "2.0"

# Features Flags - Modular
[features]
default = ["database-postgres"]
database-postgres = ["sea-orm/sqlx-postgres", "sqlx/postgres"]
database-sqlite = ["sea-orm/sqlx-sqlite", "sqlx/sqlite"]
p2p-quic = ["libp2p/quic"]
rpc-full = ["jsonrpsee/server"]
bridge-ethereum = ["ethers", "alloy"]
bridge-solana = ["solana-sdk"]
observability = ["opentelemetry", "opentelemetry-otlp"]

[dependencies.bech32]
version = "0.10"

# Multiple Binaries
[[bin]]
name = "pi-supernode"
path = "src/main.rs"

[[bin]]
name = "pi-keygen"
path = "bin/pi-keygen.rs"

[[bin]]
name = "pi-wallet"
path = "bin/pi-wallet.rs"

[[bin]]
name = "pi-bridge"
path = "bin/pi-bridge.rs"

# Dev Dependencies - Complete Testing
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serial_test = "3"
testcontainers = "0.15"
mockall = "0.13"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "v20_bench"
harness = false
